--- a/src/index.css
+++ b/src/index.css
@@ -1,24 +1,9 @@
-.app {
-  background: #209cee;
-  height: 100vh;
-  padding: 30px;
-}
+@import url('https://necolas.github.io/normalize.css/8.0.1/normalize.css');
+@import url('https://fonts.googleapis.com/css2?family=Dosis:wght@400;600&display=swap');
+@import './styles/main';
 
-.todo-list {
-  background: #e8e8e8;
-  border-radius: 4px;
-  max-width: 400px;
-  padding: 5px;
-}
-
-.todo {
-  align-items: center;
-  background: #fff;
-  border-radius: 3px;
-  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.15);
-  display: flex;
-  font-size: 12px;
-  justify-content: space-between;
-  margin-bottom: 6px;
-  padding: 3px 10px;
+*, body {
+  font-family: 'Dosis';
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
 }
