--- a/src/styles/containers.css
+++ b/src/styles/containers.css
@@ -30,9 +30,9 @@ ul {
   box-shadow: #B8DFD8 0px 1px 3px, #95cfc5 0px 1px 2px;
 }
 
-.page {
+/* .page {
   padding: 20px;
-}
+} */
 
 /* RootPage component */
 .home-page {
@@ -53,7 +53,7 @@ ul {
 .home-page__img {
   display: block;
   position: fixed;
-  z-index: 0;
+  z-index: -1;
   margin-left: 45%;
 }
 
@@ -86,4 +86,26 @@ ul {
   cursor: pointer;
   text-decoration: underline;
   color: #357569;
+}
+
+/* confirmed page */
+.confirmed-page {
+  height: 100vh;
+  display: flex;
+  align-items: center;
+}
+
+.confirmed-page__img {
+  display: block;
+  position: fixed;
+  z-index: -1;
+  height: 100%;
+}
+
+
+.confirmed-page__container {
+  margin-left: 43%;
+  background-color: var(--white);
+  padding: 20px;
+
 }
