--- a/src/styles/form.css
+++ b/src/styles/form.css
@@ -1,9 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Dosis:wght@400;600&display=swap');
 @import './variables';
 
-:root {
-  --card-shadow: var(--laguna-color) 0px 2px 4px 0px inset;
-}
 
 /* // constainers */
 .form {
@@ -13,69 +10,19 @@
 
 .btns_container {
   display: flex;
-  margin-left: 40px;
+  justify-content: center;
 }
 
 /* //   inputs */
 .input__checkbox {
   position: relative;
-  right: -10px;
-  width: auto;
-  z-index: 1;
-  opacity: 0;
-  cursor: pointer;
-  margin-right: 2em;
-}
-
-.input__checkbox:checked 
-    + label:after {
-      opacity: 1;
-    }
-
-.input__checkbox:hover + label:after {
-  opacity: 1;
-}
-
-.input__checkbox:hover + label:after {
-  opacity: 0.3;
-}
-
-.input__checkbox + label {
-  position: relative;
-  float: left;
-  left: 0;
-  width: auto;
-  cursor: pointer;
-}
-.input__checkbox:before {
-  display: inline-block;
-  position: absolute;
-  margin-right: 2em;
-  top: -9px;
-  right: -2px;
-  width: 20px;
-  height: 20px;
-  background: #FFF;
-  content: '';
-  border-radius: 2px;
-  border: 1px solid var(--dark-gray);
-}
-
-.input__checkbox:after {
-  /* icon */
-  transform: rotate(-45deg);
+  /* width: 20px !important; */
+  height: 20px !important;
   display: block;
-  position: absolute;
+  cursor: pointer;
   margin-right: 2em;
-  top: -2px;
-  right: 3px;
-  width: 8px;
-  height: 4px;
-  opacity: 0;
-  background: transparent;
-  border-left: 2px solid var(--dark-gray);
-  border-bottom: 2px solid var(--dark-gray);
-  content: '';
+  border: none;
+  box-shadow: var(--blue) 0px 2px 5px -1px, var(--blue) 0px 1px 3px -1px;
 }
 
 .input__text, .input__textarea {
@@ -121,6 +68,8 @@
 .priority__list {
   display: flex;
   align-items: flex-start;
+  flex-direction: row;
+  justify-content: center;
 }
 
 .priority__list_item {
@@ -128,6 +77,44 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.radio__1 {
+  /* background-color: var(--white); */
+  box-shadow: var(--white) 0px 30px 60px -12px inset,
+  var(--white) 0px 18px 36px -18px inset;
+}
+
+.radio__2 {
+  /* background-color: var(--prority-2); */
+  box-shadow: var(--prority-2) 0px 30px 60px -12px inset,
+  var(--prority-2) 0px 18px 36px -18px inset;
+}
+
+.radio__3 {
+  /* background-color: var(--blue); */
+  box-shadow: var(--blue) 0px 30px 60px -12px inset,
+  var(--blue) 0px 18px 36px -18px inset;
+}
+
+.radio__4 {
+  /* background-color: var(--yellow); */
+  box-shadow: var(--yellow) 0px 30px 60px -12px inset,
+var(--yellow) 0px 18px 36px -18px inset;
+/* box-shadow: var(--yellow) 0px 25px 50px -12px; */
+}
+
+.radio__5 {
+  /* background-color: var(--red); */
+  box-shadow: var(--red) 0px 30px 60px -12px inset,
+  var(--red) 0px 18px 36px -18px inset;
+}
+
+.input__date {
+  display: block;
+  margin: 0 auto;
+  border: none;
+  padding: 1rem;
 }
 
 .btn {
@@ -150,18 +137,19 @@
   /* @extend .btn; */
   margin: 0;
   margin-bottom: 10px;
+  margin: 2em auto;
   background: var(--green);
   box-shadow: #d0ecde 0px 3px 8px;
 }
 
 .btn__delete {
-  background-color: var(--red);
-  color: var(--light-green);
+  background-color: var(--light-green);
+  box-shadow: var(--red) 0px 0.0625em 0.0625em, var(--red) 0px 0.125em 0.5em, rgba(255, 255, 255, 0.1) 0px 0px 0px 1px inset;
 }
 
 .btn__edit {
-  /* @extend .btn; */
-  background-color: var(--yellow);
+  background-color: var(--light-green);
+  box-shadow: var(--yellow) 0px 0.0625em 0.0625em, var(--yellow) 0px 0.125em 0.5em, rgba(255, 255, 255, 0.1) 0px 0px 0px 1px inset;
 }
 
 .btn__show-task-details {
@@ -177,4 +165,27 @@
   margin-left: 0.4rem;
   font-size: 16px;
   color: var(--red);
+}
+
+/* modal form */
+.modal-window {
+  position: fixed;
+  width: 100%;
+  z-index: 1;
+  height: 100%;
+  top: 0;
+  left: 0;
+}
+
+.modal-window__form {
+  width: 100%;
+  background: var(--white);
+  padding: 3rem;
+  z-index: 1;
+  box-shadow: antiquewhite;
+}
+
+.btn__close {
+  margin-left: auto;
+  background-color: var(--white);
 }
