--- a/src/styles/form.css
+++ b/src/styles/form.css
@@ -183,11 +183,11 @@ var(--yellow) 0px 18px 36px -18px inset;
 }
 
 .modal-window__form {
-  width: 100%;
+  width: calc(100% - 6rem);
   background: var(--white);
   padding: 3rem;
   z-index: 1;
-  box-shadow: antiquewhite;
+  box-shadow: var(--white) 0px 60px 40px -7px;
 }
 
 .btn__close {
